force-app/main/default/objects/Contracts_Detail__c/Contracts_Detail__c.object-meta.xml
<CustomObject>
    <label>Contracts Detail</label>
    <nameField>
        <displayFormat>CD-{YYMM}-{000000}</displayFormat>
        <label>Contracts Detail Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contracts Detail</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>