force-app/main/default/objects/Contracts_Detail__c/fields/Backward_Deference__c.field-meta.xml
<CustomField>
    <fullName>Backward_Deference__c</fullName>
    <label>Backward Deference</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>