force-app/main/default/objects/Contracts_Detail__c/fields/BPM_Detail_Number__c.field-meta.xml
<CustomField>
    <fullName>BPM_Detail_Number__c</fullName>
    <externalId>true</externalId>
    <label>BPM Contract Detail Number</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>