force-app/main/default/objects/Contracts_Detail__c/fields/BU_Sales_Price__c.field-meta.xml
<CustomField>
    <fullName>BU_Sales_Price__c</fullName>
    <label>BU Sales Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>