force-app/main/default/objects/Contracts_Detail__c/fields/Carrying_Cost__c.field-meta.xml
<CustomField>
    <fullName>Carrying_Cost__c</fullName>
    <label>Payment Term Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>