force-app/main/default/objects/Contracts_Detail__c/fields/Clearance_Cost_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Clearance_Cost_Percentage__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Clearance Cost Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>