force-app/main/default/objects/Contracts_Detail__c/fields/Commission_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Commission_Ratio__c</fullName>
    <label>Commission Ratio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>