force-app/main/default/objects/Contracts_Detail__c/fields/Commission_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Commission_Unit_Price__c</fullName>
    <label>Commission Unit Price</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>