force-app/main/default/objects/Contracts_Detail__c/fields/Commodity__c.field-meta.xml
<CustomField>
    <fullName>Commodity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Name</label>
    <referenceTo>Product_Name__c</referenceTo>
    <relationshipLabel>Contracts Detail</relationshipLabel>
    <relationshipName>Contracts_Detail</relationshipName>
    <type>Lookup</type>
</CustomField>