force-app/main/default/objects/Contracts_Detail__c/fields/Contracts__c.field-meta.xml
<CustomField>
    <fullName>Contracts__c</fullName>
    <label>Contracts</label>
    <referenceTo>Contracts__c</referenceTo>
    <relationshipLabel>Contracts Detail</relationshipLabel>
    <relationshipName>Contracts_Detail</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>