force-app/main/default/objects/Contracts_Detail__c/fields/Dangerous__c.field-meta.xml
<CustomField>
    <fullName>Dangerous__c</fullName>
    <label>Dangerous</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>是</fullName>
                <label>Yes</label>
            </value>
            <value>
                <fullName>否</fullName>
                <label>No</label>
            </value>
            <value>
                <fullName>小包装普货</fullName>
                <label>Small package general goods</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>