force-app/main/default/objects/Contracts_Detail__c/fields/Delivery_Time_Text__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Time_Text__c</fullName>
    <formula>TEXT(Delivery_Time__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivery Time Text</label>
    <type>Text</type>
</CustomField>