force-app/main/default/objects/Contracts_Detail__c/fields/Delivery_Type__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Type__c</fullName>
    <label>Delivery Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>紧急交期</fullName>
                <label>gent delivery</label>
            </value>
            <value>
                <fullName>标准交期</fullName>
                <label>standard delivery</label>
            </value>
            <value>
                <fullName>常规交期</fullName>
                <label>regular delivery</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>