force-app/main/default/objects/Contracts_Detail__c/fields/Demand_Time__c.field-meta.xml
<CustomField>
    <fullName>Demand_Time__c</fullName>
    <label>Demand Time</label>
    <type>Date</type>
</CustomField>