force-app/main/default/objects/Contracts_Detail__c/fields/Designated_Source__c.field-meta.xml
<CustomField>
    <fullName>Designated_Source__c</fullName>
    <label>Designated Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>