force-app/main/default/objects/Contracts_Detail__c/fields/Discount_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Discount_Unit_Price__c</fullName>
    <label>Discount Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>