force-app/main/default/objects/Contracts_Detail__c/fields/Earliest_Demand__c.field-meta.xml
<CustomField>
    <fullName>Earliest_Demand__c</fullName>
    <label>Earliest Demand Date</label>
    <type>Date</type>
</CustomField>