force-app/main/default/objects/Contracts_Detail__c/fields/Freight_Cost__c.field-meta.xml
<CustomField>
    <fullName>Freight_Cost__c</fullName>
    <label>Freight Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>