force-app/main/default/objects/Contracts_Detail__c/fields/HQ_Contract_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>HQ_Contract_Unit_Price__c</fullName>
    <label>HQ Contract Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>