force-app/main/default/objects/Contracts_Detail__c/fields/If_Designated_Products__c.field-meta.xml
<CustomField>
    <fullName>If_Designated_Products__c</fullName>
    <label>If Designated Products</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>check</valueSetName>
    </valueSet>
</CustomField>