force-app/main/default/objects/Contracts_Detail__c/fields/If_Pallet__c.field-meta.xml
<CustomField>
    <fullName>If_Pallet__c</fullName>
    <label>If Pallet</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
                <label>Self palletizing</label>
            </value>
            <value>
                <fullName>S</fullName>
                <label>Distrubutors palletizing</label>
            </value>
            <value>
                <fullName>N</fullName>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>