force-app/main/default/objects/Contracts_Detail__c/fields/Inland_Cost_Including_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Inland_Cost_Including_Insurance__c</fullName>
    <label>Inland Cost Including Insurance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>