force-app/main/default/objects/Contracts_Detail__c/fields/Inland_Transportation_Cost__c.field-meta.xml
<CustomField>
    <fullName>Inland_Transportation_Cost__c</fullName>
    <label>Inland Transportation Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>