force-app/main/default/objects/Contracts_Detail__c/fields/Latest_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Latest_Delivery_Date__c</fullName>
    <label>Latest Delivery Date</label>
    <type>Date</type>
</CustomField>