force-app/main/default/objects/Contracts_Detail__c/fields/Latest_need__c.field-meta.xml
<CustomField>
    <fullName>Latest_need__c</fullName>
    <label>Latest Demand Date</label>
    <type>Date</type>
</CustomField>