force-app/main/default/objects/Contracts_Detail__c/fields/Line_Closers__c.field-meta.xml
<CustomField>
    <fullName>Line_Closers__c</fullName>
    <label>Item Closed Person</label>
    <length>255</length>
    <type>Text</type>
</CustomField>