force-app/main/default/objects/Contracts_Detail__c/fields/Line_Closing_Time__c.field-meta.xml
<CustomField>
    <fullName>Line_Closing_Time__c</fullName>
    <label>Item Closed Time</label>
    <type>DateTime</type>
</CustomField>