force-app/main/default/objects/Contracts_Detail__c/fields/Line_Status__c.field-meta.xml
<CustomField>
    <fullName>Line_Status__c</fullName>
    <label>Item Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>变更</fullName>
                <label>Updating</label>
            </value>
            <value>
                <fullName>关闭</fullName>
                <label>Closure</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>