force-app/main/default/objects/Contracts_Detail__c/fields/Mark_Type__c.field-meta.xml
<CustomField>
    <fullName>Mark_Type__c</fullName>
    <label>Mark Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Metoo唛头</fullName>
                <label>Metoo mark</label>
            </value>
            <value>
                <fullName>定型方案</fullName>
                <label>finalized plan</label>
            </value>
            <value>
                <fullName>新包装</fullName>
                <label>new packaging</label>
            </value>
            <value>
                <fullName>定型方案-仅标签变更（商品名不变）</fullName>
                <label>finalized plan - only label changes (product name remains unchanged)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>