force-app/main/default/objects/Contracts_Detail__c/fields/Order_Risk_Warning__c.field-meta.xml
<CustomField>
    <fullName>Order_Risk_Warning__c</fullName>
    <label>Order Risk Warning</label>
    <length>255</length>
    <type>Text</type>
</CustomField>