force-app/main/default/objects/Contracts_Detail__c/fields/Other_Issue__c.field-meta.xml
<CustomField>
    <fullName>Other_Issue__c</fullName>
    <inlineHelpText>Registration、Import Permits、Brand Approval、Quality Requirement</inlineHelpText>
    <label>Remark</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>