force-app/main/default/objects/Contracts_Detail__c/fields/Packages_Number__c.field-meta.xml
<CustomField>
    <fullName>Packages_Number__c</fullName>
    <label>Packages Number</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>