force-app/main/default/objects/Contracts_Detail__c/fields/Packing_cost__c.field-meta.xml
<CustomField>
    <fullName>Packing_cost__c</fullName>
    <label>Packing cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>