force-app/main/default/objects/Contracts_Detail__c/fields/Packing_Size_Description__c.field-meta.xml
<CustomField>
    <fullName>Packing_Size_Description__c</fullName>
    <label>Packing Size Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>