force-app/main/default/objects/Contracts_Detail__c/fields/Price_Rate__c.field-meta.xml
<CustomField>
    <fullName>Price_Rate__c</fullName>
    <label>Price Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>