force-app/main/default/objects/Contracts_Detail__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Code</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>Contracts Detail</relationshipLabel>
    <relationshipName>Contracts_Detail</relationshipName>
    <type>Lookup</type>
</CustomField>