force-app/main/default/objects/Contracts_Detail__c/fields/Product_Code_Vertify__c.field-meta.xml
<CustomField>
    <fullName>Product_Code_Vertify__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Product Code Vertify</label>
    <type>Checkbox</type>
</CustomField>