force-app/main/default/objects/Contracts_Detail__c/fields/Product_English_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_English_Name__c</fullName>
    <formula>Product__r.English_Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product English Name</label>
    <type>Text</type>
</CustomField>