force-app/main/default/objects/Contracts_Detail__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <label>Product Name(Print)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>