force-app/main/default/objects/Contracts_Detail__c/fields/Qnty__c.field-meta.xml
<CustomField>
    <fullName>Qnty__c</fullName>
    <label>Qnty</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>