force-app/main/default/objects/Contracts_Detail__c/fields/Quality_Attachment_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Quality_Attachment_Requirement__c</fullName>
    <label>Quality Attachment Requirement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>