force-app/main/default/objects/Contracts_Detail__c/fields/Quote_Detail__c.field-meta.xml
<CustomField>
    <fullName>Quote_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote Detail</label>
    <referenceTo>Quote_Detail__c</referenceTo>
    <relationshipLabel>Contracts Detail</relationshipLabel>
    <relationshipName>Contracts_Detail_Quote_Detail</relationshipName>
    <type>Lookup</type>
</CustomField>