force-app/main/default/objects/Contracts_Detail__c/fields/Recheck_Margin__c.field-meta.xml
<CustomField>
    <fullName>Recheck_Margin__c</fullName>
    <label>Recheck Margin</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>check</valueSetName>
    </valueSet>
</CustomField>