force-app/main/default/objects/Contracts_Detail__c/fields/Target_Arrival_Date__c.field-meta.xml
<CustomField>
    <fullName>Target_Arrival_Date__c</fullName>
    <label>Target Arrival Date</label>
    <type>Date</type>
</CustomField>