force-app/main/default/objects/Contracts_Detail__c/fields/Total_Freight_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Freight_Cost__c</fullName>
    <formula>Freight_Cost__c * Qnty__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Freight Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>