force-app/main/default/objects/Contracts_Detail__c/fields/Tracking_Code__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Code__c</fullName>
    <label>Tracking Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>