force-app/main/default/objects/Contracts_Detail__c/fields/Trade_Name_BPM__c.field-meta.xml
<CustomField>
    <fullName>Trade_Name_BPM__c</fullName>
    <label>Trade Name BPM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>