force-app/main/default/objects/Contracts_Detail__c/fields/Unit_Label__c.field-meta.xml
<CustomField>
    <fullName>Unit_Label__c</fullName>
    <label>Unit Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>