force-app/main/default/objects/Contracts_Detail__c/recordTypes/Headquarters.recordType-meta.xml
<RecordType>
    <fullName>Headquarters</fullName>
    <active>true</active>
    <label>Headquarters</label>
</RecordType>